Simple network communication between server and client.