@@ -1,2 +1,6 @@
 # Battleships
 Battlehips game with ai and network
+
+## Inbetriebnahme
+
+Vm-Option: --module-path /home/josua/Documents/JavaFX/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml -Djdk.gtk.version=2
